--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,23 @@
 <div id="map">
   <h3>Sign up to start a local</br> brigade in your city.</h3>
   <h1>Hack your city!</h1>
-  <%= image_tag('map.png') %>
+  <div id="int-map">
+    <div class="appset" id="foo">
+      App Name
+    </div>
+    <div class="appset" id="sf">
+      App Name
+    </div>
+    <div class="appset" id="sd">
+      App Name
+    </div>
+    <div class="appset" id="bar">
+      App Name
+    </div>
+    <div class="appset" id="bat">
+      App Name
+    </div>
+  </div>
 </div>
 
 <div class="sidebar">
@@ -18,3 +34,4 @@
     <div class="clear"></div>
   </form>
 </div>
+  
