--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,19 +3,19 @@
   <h1>Hack your city!</h1>
   <div id="int-map">
     <div class="appset" id="foo">
-      App Name
+      Apps in <strong>Los Angeles</strong>
     </div>
     <div class="appset" id="sf">
-      App Name
+      Apps in <strong>San Diego</strong>
     </div>
     <div class="appset" id="sd">
-      App Name
+      Apps in <strong>San Francisco</strong>
     </div>
     <div class="appset" id="bar">
-      App Name
+      Apps in <strong>Norfolk</strong>
     </div>
     <div class="appset" id="bat">
-      App Name
+      Apps in <strong>Kansas City</strong>
     </div>
   </div>
 </div>
