--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -41,17 +41,29 @@
 	font-style: normal;
 }
 
+@font-face {
+    font-family: 'LeagueGothicRegular';
+    src: url('/assets/League_Gothic-webfont.eot');
+    src: url('/assets/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/League_Gothic-webfont.woff') format('woff'),
+         url('/assets/League_Gothic-webfont.ttf') format('truetype'),
+         url('/assets/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 h1 {
-  font-family: 'Avenir Medium', Helvetica, Arial, sans-serif;
-  font-size: 280%;
-  letter-spacing: -0.06em;
+  font-family: 'LeagueGothicRegular', 'Avenir Medium', Helvetica, Arial, sans-serif;
+  font-size: 520%;
+  letter-spacing: -0.04em;
   color: $lime;
   margin-bottom: 15px;
+  text-transform: uppercase;
 }
 .sidebar {
   h1 {
-    font-size: 200%;
+    font-size: 300%;
   }
 }
 h2 {
